reblog bug fixed. avatars visible. will style

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -383,3 +383,8 @@ md-tabs.md-default-theme.md-primary, md-tabs.md-primary > md-tabs-wrapper {
 .yeah {
 	display: inline;
 }
+
+.avatar {
+	width:50px;
+	height:50px;
+}
